--- a/Client Side/src/Components/pogstyle.css
+++ b/Client Side/src/Components/pogstyle.css
@@ -22,18 +22,18 @@
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-.progress.vertical > .progress-bar {
+.progress.vertical > .progressBar {
     width: 100% !important;
     position: absolute;
     bottom: 0;
 }
 
-.progress-bar {
-    background-color: #2196f3;
+.progressBar {
+
     box-shadow: none;
 }
 
-.progress-bar {
+.progressBar {
     float: left;
     width: 0;
     height: 100%;
@@ -41,7 +41,7 @@
     line-height: 20px;
     color: #fff;
     text-align: center;
-    background-color: #337ab7;
+
     -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
     box-shadow: inset 0 -1px 0 rgba(0, 0, 0, 0.15);
     -webkit-transition: width 0.6s ease;
